--- a/index.html
+++ b/index.html
@@ -199,27 +199,35 @@
           <div class="card-carousel-container">
             <div class="card-carousel">
               <div class="carousel-card">
-                <div class="skill-icon"></div>
+                <div class="skill-icon">
+                  <img src="assets/roblox.png" alt="Roblox" class="skill-img">
+                </div>
                 <h5><span class="text-blue">Roblox</span> Studio</h5>
-                <p>Since 2019.</p>
+                <p>Since 2019</p>
               </div>
 
               <div class="carousel-card">
-                <div class="skill-icon"></div>
+                <div class="skill-icon">
+                  <img src="assets/discord.png" alt="Discord" class="skill-img">
+                </div>
                 <h5><span class="text-purple">Discord Bot</span> Development</h5>
                 <p>Since 2021</p>
               </div>
 
               <div class="carousel-card">
-                <div class="skill-icon"></div>
+                <div class="skill-icon">
+                  <img src="assets/godot.png" alt="Godot" class="skill-img">
+                </div>
                 <h5><span class="text-light-blue">Godot 4</span> 2D &amp; 3D</h5>
-                <p>Since 2021.</p>
+                <p>Since 2021</p>
               </div>
 
               <div class="carousel-card">
-                <div class="skill-icon"></div>
+                <div class="skill-icon">
+                  <img src="assets/webdev.png" alt="Web Development" class="skill-img">
+                </div>
                 <h5><span class="text-green">Web</span> Development</h5>
-                <p>Since 2021.</p>
+                <p>Since 2021</p>
               </div>
             </div>
           </div>
