--- a/index.html
+++ b/index.html
@@ -198,36 +198,52 @@
         <div class="skills-grid">
           <div class="skill-card" id="roblox-skill">
             <div class="skill-logo">
-              <img src="assets/roblox.png" alt="Roblox Studio" >
+              <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="currentColor">
+                <path d="M18.926 23.998 0 18.892 5.075.002 24 5.108ZM15.348 16.14 7.86 13.862l2.278-7.49 7.487 2.278Z"/>
+              </svg>
             </div>
-            <h5><span class="text-blue">Roblox</span> Studio</h5>
-            <p>Since 2019</p>
+            <div class="skill-info">
+              <h5><span class="text-blue">Roblox</span> Studio</h5>
+              <p>Since 2019</p>
+            </div>
           </div>
 
           <div class="skill-card" id="discord-skill">
             <div class="skill-logo">
-              <img src="assets/discord.png" alt="Discord Bot Development" >
+              <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="currentColor">
+                <path d="M20.317 4.369a19.791 19.791 0 0 0-4.885-1.515.074.074 0 0 0-.079.037c-.211.375-.444.864-.608 1.25a18.626 18.626 0 0 0-5.587 0 12.37 12.37 0 0 0-.617-1.25.077.077 0 0 0-.079-.037 19.736 19.736 0 0 0-4.885 1.515.07.07 0 0 0-.032.028C1.579 9.063.922 13.58 1.21 18.057a.083.083 0 0 0 .031.056 19.9 19.9 0 0 0 5.993 3.036.078.078 0 0 0 .084-.028c.462-.63.874-1.295 1.226-1.994a.076.076 0 0 0-.041-.104 12.321 12.321 0 0 1-1.773-.848.076.076 0 0 1-.008-.126c.12-.09.24-.183.354-.277a.074.074 0 0 1 .078-.01c3.725 1.7 7.767 1.7 11.449 0a.074.074 0 0 1 .079.009c.114.094.234.188.355.278a.076.076 0 0 1-.006.126 11.736 11.736 0 0 1-1.774.847.076.076 0 0 0-.04.105c.36.698.772 1.363 1.226 1.993a.077.077 0 0 0 .084.029 19.876 19.876 0 0 0 6.002-3.036.077.077 0 0 0 .03-.055c.5-8.197-.838-12.671-3.548-13.66a.061.061 0 0 0-.032-.008ZM8.02 15.331c-1.182 0-2.157-1.086-2.157-2.419 0-1.333.955-2.419 2.157-2.419 1.211 0 2.176 1.096 2.157 2.419 0 1.333-.955 2.419-2.157 2.419Zm7.974 0c-1.182 0-2.157-1.086-2.157-2.419 0-1.333.955-2.419 2.157-2.419 1.211 0 2.176 1.096 2.157 2.419 0 1.333-.946 2.419-2.157 2.419Z"/>
+              </svg>
             </div>
-            <h5><span class="text-purple">Discord Bot</span> Development</h5>
-            <p>Since 2021</p>
+            <div class="skill-info">
+              <h5><span class="text-purple">Discord Bot</span> Development</h5>
+              <p>Since 2021</p>
+            </div>
           </div>
 
           <div class="skill-card" id="godot-skill">
             <div class="skill-logo">
-              <img src="assets/Godot.png" alt="Godot 4" >
+              <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="currentColor">
+                <path d="M10.316 3.68c-.832.1-1.615.295-2.184.554L6.824 2.927 4.524 5.227l1.308 1.308a6.765 6.765 0 0 0-.555 2.184l-1.85.312-.06 3.27 1.91.32c.1.832.295 1.616.554 2.185L4.524 16.11l2.3 2.3 1.308-1.308a6.764 6.764 0 0 0 2.184.554l.312 1.85 3.27.06.32-1.91a6.765 6.765 0 0 0 2.185-.554l1.303 1.308 2.301-2.3-1.308-1.308a6.765 6.765 0 0 0 .554-2.184l1.85-.312.06-3.27-1.91-.32a6.765 6.765 0 0 0-.554-2.185l1.308-1.308-2.3-2.3-1.308 1.308a6.765 6.765 0 0 0-2.184-.555l-.312-1.85-3.27-.06Zm1.753 4.88c2.084 0 3.77 1.686 3.77 3.77s-1.686 3.77-3.77 3.77-3.77-1.686-3.77-3.77 1.686-3.77 3.77-3.77zm0 1.26c-1.386 0-2.51 1.124-2.51 2.51 0 1.386 1.124 2.51 2.51 2.51 1.386 0 2.51-1.124 2.51-2.51 0-1.386-1.124-2.51-2.51-2.51z"/>
+              </svg>
             </div>
-            <h5><span class="text-light-blue">Godot 4</span> 2D &amp; 3D</h5>
-            <p>Since 2021</p>
+            <div class="skill-info">
+              <h5><span class="text-light-blue">Godot 4</span> 2D &amp; 3D</h5>
+              <p>Since 2021</p>
+            </div>
           </div>
 
           <div class="skill-card" id="webdev-skill">
             <div class="skill-logo">
-              <img src="assets/webdev.png" alt="Web Development" >
+              <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="currentColor">
+                <path d="M14.6 16.6l4.6-4.6-4.6-4.6L16 6l6 6-6 6-1.4-1.4m-5.2 0L4.8 12l4.6-4.6L8 6l-6 6 6 6 1.4-1.4z"/>
+              </svg>
             </div>
-            <h5><span class="text-green">Web</span> Development</h5>
-            <p>Since 2021</p>
+            <div class="skill-info">
+              <h5><span class="text-green">Web</span> Development</h5>
+              <p>Since 2021</p>
+            </div>
           </div>
-          
+
         </div>
       </div>
     </section>
