--- a/index.html
+++ b/index.html
@@ -107,7 +107,10 @@
                     Deployed an API server on Render using the FastAPI framework, integrating an AI for immersive NPC
                     dialogue systems compatible with any game engine.
                   </p>
-                  <button type="button" class="btn btn-primary">View Project</button>
+                  <a href="https://www.roblox.com/games/17124884493/Chat-with-a-smart-AI-NPC-AiConvo-Showcase" target="_blank" rel="noopener noreferrer" class="btn btn-primary">
+                    View Project
+                  </a>
+
                 </div>
               </div>
             </div>
@@ -130,7 +133,9 @@
                     2560. The Arduino communicates with games or software either through JSON or by simulating assigned
                     keybinds and mouse movements.
                   </p>
-                  <button type="button" class="btn btn-primary">View Project</button>
+                  <a href="https://example.com" target="_blank" rel="noopener noreferrer" class="btn btn-primary">
+                    View Project
+                  </a>
                 </div>
               </div>
             </div>
@@ -152,7 +157,9 @@
                     Developed an Orbital Mechanics simulation in Godot 2D simulating the n-body problem and the use of
                     the polar equation of 2-body orbits.
                   </p>
-                  <button type="button" class="btn btn-primary">View Project</button>
+                  <a href="https://example.com" target="_blank" rel="noopener noreferrer" class="btn btn-primary">
+                    View Project
+                  </a>
                 </div>
               </div>
             </div>
@@ -179,7 +186,9 @@
               <h5><span class="text-green">Generative</span> AI NPC Dialogue System</h5>
               <p>Deployed an API server on Render using FastAPI, integrating AI for immersive NPC dialogues in any game
                 engine.</p>
-              <button type="button" class="btn btn-primary">View Project</button>
+              <a href="https://www.roblox.com/games/17124884493/Chat-with-a-smart-AI-NPC-AiConvo-Showcase" target="_blank" rel="noopener noreferrer" class="btn btn-primary">
+                    View Project
+              </a>
             </div>
 
             <div class="carousel-card">
@@ -188,7 +197,9 @@
               <h5><span class="text-yellow">Joystick</span> Controller</h5>
               <p>Built using components connected to an Arduino Mega. Communicates with software through JSON or keybind
                 simulation.</p>
-              <button type="button" class="btn btn-primary">View Project</button>
+              <a href="https://example.com" target="_blank" rel="noopener noreferrer" class="btn btn-primary">
+                    View Project
+              </a>
             </div>
 
             <div class="carousel-card">
@@ -196,7 +207,9 @@
                 title="Orbital Mechanics Simulation"></iframe>
               <h5><span class="text-red">Orbital</span> Mechanics Simulation</h5>
               <p>Developed a physics-based orbital simulation using Godot, inspired by Kerbal Space Program.</p>
-              <button type="button" class="btn btn-primary">View Project</button>
+              <a href="https://example.com" target="_blank" rel="noopener noreferrer" class="btn btn-primary">
+                    View Project
+              </a>
             </div>
           </div>
         </div>
