--- a/index.html
+++ b/index.html
@@ -84,86 +84,9 @@
       <!-- Desktop Carousel -->
       <div id="customCarousel" class="carousel slide mt-4 d-none d-lg-block" data-bs-ride="carousel">
         <div class="carousel-indicators">
-          <button type="button" data-bs-target="#customCarousel" data-bs-slide-to="0" class="active" aria-current="true"
-            aria-label="Slide 1"></button>
-          <button type="button" data-bs-target="#customCarousel" data-bs-slide-to="1" aria-label="Slide 2"></button>
-          <button type="button" data-bs-target="#customCarousel" data-bs-slide-to="2" aria-label="Slide 3"></button>
         </div>
 
         <div class="carousel-inner">
-          <!-- Project 1: AI NPC Dialogue -->
-          <div class="carousel-item active">
-            <div class="carousel-content">
-              <div class="project-layout">
-                <div class="project-video">
-                  <iframe src="https://www.youtube.com/embed/g4SFLh9Imq4?&loop=1&playlist=g4SFLh9Imq4" allowfullscreen
-                    title="AI NPC Dialogue System Demo"></iframe>
-                </div>
-                <div class="project-info">
-                  <h3 class="project-title">
-                    <strong><span class="text-green">Generative</span> AI NPC Dialogue System</strong>
-                  </h3>
-                  <p class="project-description">
-                    Deployed an API server on Render using the FastAPI framework, integrating an AI for immersive NPC
-                    dialogue systems compatible with any game engine.
-                  </p>
-                  <a href="https://www.roblox.com/games/17124884493/Chat-with-a-smart-AI-NPC-AiConvo-Showcase" target="_blank" rel="noopener noreferrer" class="btn btn-primary">
-                    View Project
-                  </a>
-
-                </div>
-              </div>
-            </div>
-          </div>
-
-          <!-- Project 2: Joystick Controller -->
-          <div class="carousel-item">
-            <div class="carousel-content">
-              <div class="project-layout">
-                <div class="project-video">
-                  <iframe src="https://www.youtube.com/embed/gpotQWYRFac?" allowfullscreen
-                    title="Joystick Controller Demo"></iframe>
-                </div>
-                <div class="project-info">
-                  <h3 class="project-title">
-                    <strong><span class="text-yellow">Joystick</span> Controller</strong>
-                  </h3>
-                  <p class="project-description">
-                    Built a joystick controller using various components found and connected them to an Arduino Mega
-                    2560. The Arduino communicates with games or software either through JSON or by simulating assigned
-                    keybinds and mouse movements.
-                  </p>
-                  <a href="https://example.com" target="_blank" rel="noopener noreferrer" class="btn btn-primary">
-                    View Project
-                  </a>
-                </div>
-              </div>
-            </div>
-          </div>
-
-          <!-- Project 3: Orbital Mechanics -->
-          <div class="carousel-item">
-            <div class="carousel-content">
-              <div class="project-layout">
-                <div class="project-video">
-                  <iframe src="https://www.youtube.com/embed/k_mOLVYPUOQ?" allowfullscreen
-                    title="Orbital Mechanics Simulation Demo"></iframe>
-                </div>
-                <div class="project-info">
-                  <h3 class="project-title">
-                    <strong><span class="text-red">Orbital</span> Mechanics Simulation</strong>
-                  </h3>
-                  <p class="project-description">
-                    Developed an Orbital Mechanics simulation in Godot 2D simulating the n-body problem and the use of
-                    the polar equation of 2-body orbits.
-                  </p>
-                  <a href="https://example.com" target="_blank" rel="noopener noreferrer" class="btn btn-primary">
-                    View Project
-                  </a>
-                </div>
-              </div>
-            </div>
-          </div>
         </div>
 
         <button class="carousel-control-prev" type="button" data-bs-target="#customCarousel" data-bs-slide="prev">
@@ -180,37 +103,6 @@
       <div class="mobile-carousel d-lg-none mt-5">
         <div class="card-carousel-container">
           <div class="card-carousel">
-            <div class="carousel-card">
-              <iframe src="https://www.youtube.com/embed/g4SFLh9Imq4?&loop=1&playlist=g4SFLh9Imq4" allowfullscreen
-                title="AI NPC Dialogue System"></iframe>
-              <h5><span class="text-green">Generative</span> AI NPC Dialogue System</h5>
-              <p>Deployed an API server on Render using FastAPI, integrating AI for immersive NPC dialogues in any game
-                engine.</p>
-              <a href="https://www.roblox.com/games/17124884493/Chat-with-a-smart-AI-NPC-AiConvo-Showcase" target="_blank" rel="noopener noreferrer" class="btn btn-primary">
-                    View Project
-              </a>
-            </div>
-
-            <div class="carousel-card">
-              <iframe src="https://www.youtube.com/embed/gpotQWYRFac?" allowfullscreen
-                title="Joystick Controller"></iframe>
-              <h5><span class="text-yellow">Joystick</span> Controller</h5>
-              <p>Built using components connected to an Arduino Mega. Communicates with software through JSON or keybind
-                simulation.</p>
-              <a href="https://example.com" target="_blank" rel="noopener noreferrer" class="btn btn-primary">
-                    View Project
-              </a>
-            </div>
-
-            <div class="carousel-card">
-              <iframe src="https://www.youtube.com/embed/k_mOLVYPUOQ?" allowfullscreen
-                title="Orbital Mechanics Simulation"></iframe>
-              <h5><span class="text-red">Orbital</span> Mechanics Simulation</h5>
-              <p>Developed a physics-based orbital simulation using Godot, inspired by Kerbal Space Program.</p>
-              <a href="https://example.com" target="_blank" rel="noopener noreferrer" class="btn btn-primary">
-                    View Project
-              </a>
-            </div>
           </div>
         </div>
       </div>
@@ -370,6 +262,8 @@
 
   <!-- Bootstrap JS -->
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
+  <!-- Projects Dynamic Loader -->
+  <script src="./projects.js"></script>
 </body>
 
 </html>
