--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <meta name="description"
     content="I'm an 18 year old developer and a university student from Malaysia. My timezone is GMT+8.">
   <meta name="keywords"
-    content="Afaz, Portfolio, Arclas, Developer, Afaz07, Hub, Firdaus, Zaki, Firdaus Zaki Portfolio">
+    content="Afaz, Portfolio, Arclas, Developer, Afaz07, Hub, Firdaus, Zaki, Firdaus Zaki Portfolio, webdev, roblox, godot, discord bot">
 
   <!-- Open Graph / Facebook -->
   <meta property="og:type" content="website">
@@ -18,14 +18,14 @@
   <meta property="og:title" content="AFAZ | Portfolio">
   <meta property="og:description"
     content="I'm an 18 year old developer and a university student from Malaysia. My timezone is GMT+8.">
-  <meta property="og:image" content="https://www.firdauszaki.com/preview.jpg">
+  <meta property="og:image" content="https://www.firdauszaki.com/preview.png">
 
   <!-- Twitter -->
   <meta name="twitter:card" content="summary_large_image">
   <meta name="twitter:title" content="AFAZ | Portfolio">
   <meta name="twitter:description"
     content="I'm an 18 year old developer and a university student from Malaysia. My timezone is GMT+8.">
-  <meta name="twitter:image" content="https://www.firdauszaki.com/preview.jpg">
+  <meta name="twitter:image" content="https://www.firdauszaki.com/preview.png">
 
   <!-- Theme -->
   <meta name="theme-color" content="#5797ff">
