--- a/index.html
+++ b/index.html
@@ -18,14 +18,14 @@
   <meta property="og:title" content="AFAZ | Portfolio">
   <meta property="og:description"
     content="I'm an 18 year old developer and a university student from Malaysia. My timezone is GMT+8.">
-  <meta property="og:image" content="https://www.firdauszaki.com/preview.png">
+  <meta property="og:image" content="https://www.firdauszaki.com/assets/preview.jpg">
 
   <!-- Twitter -->
   <meta name="twitter:card" content="summary_large_image">
   <meta name="twitter:title" content="AFAZ | Portfolio">
   <meta name="twitter:description"
     content="I'm an 18 year old developer and a university student from Malaysia. My timezone is GMT+8.">
-  <meta name="twitter:image" content="https://www.firdauszaki.com/preview.png">
+  <meta name="twitter:image" content="https://www.firdauszaki.com/assets/preview.jpg">
 
   <!-- Theme -->
   <meta name="theme-color" content="#5797ff">
