--- a/index.html
+++ b/index.html
@@ -101,9 +101,12 @@
 
       <!-- Mobile & Tablet Carousel -->
       <div class="mobile-carousel d-lg-none mt-5">
-        <div class="card-carousel-container">
+        <div class="card-carousel-container" id="projectCarouselContainer">
           <div class="card-carousel">
           </div>
+        </div>
+        <div class="swipe-hint" id="swipeHint">
+          <span class="swipe-text">swipe right →</span>
         </div>
       </div>
     </div>
