--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
   <meta property="og:image" content="https://www.firdauszaki.com/assets/preview.jpg">
 
   <!-- Twitter -->
-  <meta name="twitter:card" content="website">
+  <meta name="twitter:card" content="summary_large_image">
   <meta name="twitter:title" content="AFAZ | Portfolio">
   <meta name="twitter:description"
     content="I'm an 18 year old developer and a university student from Malaysia. My timezone is GMT+8.">
