--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@
             </svg>
           </div>
           <div class="skill-info">
-            <h5><span class="text-blue">Roblox</span> Studio</h5>
+            <h5><span class="text-roblox-blue">Roblox</span> Studio</h5>
             <p>Since 2019</p>
           </div>
         </div>
